removed files from public to document root

--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
      <div class="row" style="display: flex;justify-content: center">
         <div class="contact-col">
 
-<form action="../includes/register.txt" method="post" id="form">
+<form action="includes/register.txt" method="post" id="form">
 <h2 style="margin: 5% auto;text-align:center;color:rgba(68, 148, 68, 0.62)">FILL THE FORM TO REGISTER</h2>
 <input type="text" name="firstname" id="firstname" required placeholder="Enter first name">
 <input type="text" name="middlename" id="middlename" required placeholder="Middle name">
